new fields added to Record
