# src/Entity/Record.php
@@ -29,6 +29,21 @@ class Record implements JsonSerializable
     private $name;
 
     /**
+     * @ORM\Column(type="string", length=255)
+     */
+    private $genre;
+
+    /**
+     * @ORM\Column(type="string", length=255)
+     */
+    private $description;
+
+    /**
+     * @ORM\Column(type="datetime", nullable=true)
+     */
+    private ?DateTime $published_at;
+
+    /**
      * @ORM\Column(type="string", length=255, nullable=true)
      */
     private $cover_photo;
@@ -142,6 +157,66 @@ class Record implements JsonSerializable
     public function setUpdatedAt(): void
     {
         $this->updated_at = new DateTime();
+    }
+
+    /**
+     * @return string|null
+     */
+    public function getGenre(): ?string
+    {
+        return $this->genre;
+    }
+
+    /**
+     * @param string|null $genre
+     *
+     * @return $this
+     */
+    public function setGenre(?string $genre = ''): self
+    {
+        $this->genre = $genre;
+
+        return $this;
+    }
+
+    /**
+     * @return string|null
+     */
+    public function getDescription(): ?string
+    {
+        return $this->description;
+    }
+
+    /**
+     * @param string|null $description
+     *
+     * @return $this
+     */
+    public function setDescription(?string $description = ''): self
+    {
+        $this->description = $description;
+
+        return $this;
+    }
+
+    /**
+     * @return DateTime|null
+     */
+    public function getPublishedAt(): ?DateTime
+    {
+        return $this->published_at;
+    }
+
+    /**
+     * @param DateTime|null $published_at
+     *
+     * @return $this
+     */
+    public function setPublishedAt(?DateTime $published_at): self
+    {
+        $this->published_at = $published_at;
+
+        return $this;
     }
 
     /**
